<resources>
    <string name="title_activity_dang_ki">Đăng nhập</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_menu">Trang Chủ</string>
    <string name="app_name">FC Hà Nội</string>
    <string name="app_user">UserName :</string>
    <string name="app_password">Password :</string>
    <string name="app_nameuser">Nguyễn Tiến Đạt</string>
    <string name="app_matkhau">*************</string>
    <string name="app_Luumatkhau">Lưu mật khẩu ?</string>
    <string name="app_login">Đăng Nhập</string>
    <string name="quen_mat_khau">Quản mật khẩu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appgmail">khongbietgmail@gmail.com</string>
    <string name="app_Email">Email</string>
    <string name="app_guiemail">khongcoemail@gmail.com</string>
    <string name="app_tim">Tìm</string>
    <string name="app_matkhaula">deonoidau</string>
    <string name="app_matkhaud">Mật khẩu của bạn là :</string>
    <string name="app_introduce">Giới Thiệu</string>
    <string name="contentgoithie">Câu lạc bộ Bóng đá Hà Nội (gọi tắt là Hà Nội FC) có tên tiếng Anh:
        Hanoi Football Club trước đây mang tên Hà Nội TT - một câu lạc bộ bóng đá lớn tại Việt Nam, hiện thi đấu tại
        Giải bóng đá vô địch quốc gia, có trụ sở ở Hà Nội, sân nhà là sân vận động Hàng Đẫy. Đội bóng đang giữ kỉ lục 3 năm
        liền thăng hạng, từ hạng ba lên thi đấu ở hạng cao nhất của bóng đá Việt Nam.
   Đội bóng đá CAHN được thành lập năm 1965 cùng với đội bóng đá Thể Công đã từng một thời
        làm mưa làm gió bóng đá Miền Bắc VN, với lối chơi đặc sắc của đội là phòng ngự phản công đây
        là một lối chơi mà bóng đá các CLB Châu Âu vẫn hay áp dụng ở đấu trường Champions league, với
        lối chơi này đội đã làm các đối thủ lớn bóng đá VN như Thể Công, Cảng Sài Gòn hay Công An TPHCM
        gặp rất nhiều khó khăn nhưng ngược lại khi gặp các đội bóng dưới cơ họ lại chơi rất kém thuyết phục
        chính vì vậy mà trong bảng thành tích của đội bóng CAHN không được xếp vào (top) các đội bóng giàu thành
        tích nhất Vlegue.

        </string>
    <string name="add_name">Tên cầu thủ</string>
    <string name="add_namsinh">Năm Sinh</string>
    <string name="tv_vitri">Vị trí</string>
    <string name="tv_ngaugianhap">Ngày Gia Nhập</string>
    <string name="btn_luu">Lưu</string>
    <string name="btn_thoat">Thoát</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="btn_tim">Tìm</string>
    <string name="btn_xemnhiemvu">Xem Nhiệm Vụ</string>
    <string name="add_vitri">Vị Trí</string>
    <string name="app_nhiemvu">Nhiệm Vụ</string>
    <string name="contentgnhemvu">Bảo vệ khung thành đội nhà và ngăn cản đối phương ghi bàn thắng</string>
    <string name="app_thumon">Thủ Môn</string>
    <string name="app_capnhap">Cập Nhập</string>
    <string name="app_hy">Hủy</string>
    <string name="error_UserName">không dươc để trống</string>
    <string name="error_Ki_Tu_Dac_Bite">Không chứa các kí tự đặc biệt</string>
    <string name="error_PassWord_It_Hon_6Ki_Tu">mật khẩu phải ó ít nhất 6 kí tự</string>
    <string name="notify_wrong_username_or_password">tên đăng nhập hoạc maatr khẩu không đúng yêu cầu nhập lại</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quanghai">Bầu Hiển: 2 đến 3 năm nữa, Quang Hải sẽ tới những đội hàng đầu châu Á</string>
    <string name="vanquyet">Văn Quyết, người xua đi nỗi nhớ Công Vinh</string>
    <string name="aodau">Hà Nội FC chính thức ra mắt logo mới đậm dấu nét văn hóa thủ đô</string>
    <string name="doitre"><![CDATA[Công tác đào tạo bóng đá trẻ của CLB Hà Nội T&T: Quả ngọt nhà bầu Hiển]]></string>
    <string name="anmung">V.League 2018: CLB Hà Nội lên ngôi vô địch sớm chưa từng có trong lịch sử</string>
    <string name="addbandau">Chào mừng bạn đến với thế giới bóng đá</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="commitmatkhau">Nhật lại mật khẩu</string>
    <string name="tennguoidung">Tên người dùng</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_cancel">Hủy</string>
    <string name="notify_save_successful">Lưu thành công</string>
    <string name="notify_add_successful">Thêm người dung thành công</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="app_tintuc"><![CDATA[Xem tiep >>]]></string>
    <string name="thoat">Thoat</string>
    <string name="sdt">Số điện thoại</string>
    <string name="diachi">Địa Chỉ</string>
    <string name="tennguoimua">Tên</string>
    <string name="soluong">Số Lượng</string>
    <string name="gmailcom">abc@gmail.com</string>
    <string name="nguoidung">Người Dừng</string>
    <string name="veluotve">Vé lượt về</string>
    <string name="mua">Mua</string>
    <string name="huy">Hủy</string>
    <string name="loi1">Vui long nhập</string>
    <string name="error_1">Bắt đầu là +84 hoặc 0</string>
    <string name="error_2">Gồm 10 hoặc 11 kí tự</string>
    <string name="errormaxmin">phải lớn hơn 5 và nhỏ hơn 32 kí tự</string>
    <string name="errorsl">chỉ được mua 5 vé</string>
    <string name="error_PassWord">Không được đê trống</string>
    <string name="error_ConfirmPassWord">mật khẩu không khớp</string>
    <string name="username">Username</string>
    <string name="password">mat khẩu</string>
    <string name="password3">nhập lại mật khẩu</string>
    <string name="phone">Điện thoại</string>
    <string name="name">Điện thoại</string>
    <string name="name1">Họ tên</string>
    <string name="error_Deletee">Không có gì để xóa</string>
    <string name="errormin">phải lớn hơn 5 kí tự</string>
    <string name="errormax">phaiw lớn hơn 32 kí tự</string>
    <string name="dangky">Đăng ký</string>
    <string name="phaigiongpassword">Nhập giống mật khẩu trên</string>
    <string name="erorrrr">Email ko hop le</string>
</resources>
