<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edtten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tennguoimua"/>

    <EditText
        android:inputType="phone"
        android:id="@+id/edtsdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sdt"/>
    <EditText
        android:id="@+id/edtdiachi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diachi"/>
    <EditText
        android:inputType="phone"
        android:id="@+id/edtsoluong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/soluong"/>
    <Button
        android:background="@color/colorPrimary"
        android:id="@+id/btnmua"
        android:text="@string/mua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:id="@+id/btnhuy"
        android:text="@string/huy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>