<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="30dp"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:src="@drawable/email"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="#F6C06F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_Email"
            android:textSize="15dp" />
        <EditText
            android:hint="@string/app_guiemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:background="@color/colorPrimary"
        android:text="@string/app_tim"
        android:textColor="@color/colorwhite"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#F6C06F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/app_matkhaud"
            />
        <EditText
            android:hint="@string/app_matkhaula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>