<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_margin="30dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:imeOptions="actionNext"
            android:inputType="text"
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tendangnhap" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:id="@+id/edtPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/matkhau" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/commitmatkhau" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittennguoidung"

            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tennguoidung" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_Email" />


    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:text="@string/btn_save"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:text="@string/btn_cancel"
        android:layout_height="wrap_content" />

</LinearLayout>