<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="30dp"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:imeOptions="actionNext"
            android:inputType="text"
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_user" />


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:id="@+id/edtPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_password" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_Email" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtName"

            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sodienthoai" />


    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:text="@string/btn_luu"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:textColor="@color/colorwhite"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorwhite"
            android:background="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:text="@string/btn_thoat"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>