<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">
    <Button
        android:text="@string/app_nhiemvu"
        android:layout_width="match_parent"
        android:layout_marginBottom="5dp"
        android:textColor="@color/colorwhite"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />

    <android.support.design.widget.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        app:title="Nguyen Tien Dat"
        app:contentScrim="@color/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/nhiemvu"
            app:layout_collapseMode="parallax" />


    </android.support.design.widget.CollapsingToolbarLayout>


    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_thumon"
            android:textColor="@color/colorwhite"
            android:textSize="25dp" />
        <TextView
            android:layout_marginTop="15dp"
            android:textColor="@color/colorwhite"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contentgnhemvu"
            />

    </LinearLayout>
    <Button
        android:layout_marginTop="120dp"
       android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorwhite"
        android:text="@string/app_capnhap"
        />


</LinearLayout>