<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="#FFF"
    android:padding="10dp">





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/username"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_height="19dp" />
            <EditText
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/edtChangeUser"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/password"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_height="19dp" />
            <EditText
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:id="@+id/edtChangePass"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="**********"/>



            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/password3"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_height="19dp" />
            <EditText
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:id="@+id/edtChangeConfirmPass"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="**********"/>


            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/phone"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_height="19dp" />
            <EditText
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:id="@+id/edtChangePhone"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"/>

            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/name1"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:layout_height="19dp" />
            <EditText
                android:inputType="text"
                android:imeOptions="actionDone"
                android:id="@+id/edtChangeName"
                android:backgroundTint="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="10sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <Button
                android:id="@+id/btnChange"
                android:text="Thay đổi"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
/>
            <Button
                android:id="@+id/btnClose"
                android:text="Hủy"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>



</LinearLayout>